Runtime state filtering (#611)
* Runtime state filtering (WIP)

* state filtering in handler. use indexes for performace

* Bump image versions

* Always exclude pending operations

* Fix select syntax

* Remove compound indx on operations

* Extend swagger schema

* Fix errors after merge

* Changes after review

* Fix runtime client test
